# cli-messanger

./: CMakeLists.txt  CONTRIBUTING.md  LICENCE.md  README.md  vcpkg.json
.github/workflows/: build.yml
client/assets/menu/: auth.txt  chats.txt  help.txt  main.txt  profile.txt  server.txt
client/assets/save/: save.json
client/src/: main.cpp
client/src/api/message_api/: imessage_api.h
client/src/api/message_api/fakeapi/: fake_message_api.cpp  fake_message_api.h
client/src/api/message_api/httpapi/: http_message_api.cpp  http_message_api.h  http_response.h
client/src/api/message_api/httpsapi/: https_message_api.cpp  https_message_api.h  https_response.h
client/src/app/: app.cpp  app.h  app_controller.cpp  app_controller.h
client/src/console/: console.cpp  console.h
client/src/console/menu/: chat_screen.cpp  chats_menu.cpp  chats_menu.h  main_menu.h  profile_menu.cpp  register_menu.cpp  register_menu.h  server_menu.cpp  server_menu.h
client/src/models/: app_config.cpp  app_config.h  chat_info.cpp  chat_info.h  message.cpp  message.h  server_info.cpp  server_info.h  user_info.cpp  user_info.h
client/src/screens/: auth_screen.cpp  auth_screen.h  chat_screen.cpp  chat_screen.h  chats_screen.cpp  chats_screen.h  i_screen.h  main_screen.cpp  main_screen.h  profile_screen.cpp  profile_screen.h  register_screen.cpp  register_screen.h  server_screen.cpp  server_screen.h
client/src/utils/command/: command_parser.cpp  command_parser.h
client/src/utils/console/: console.cpp  console.h
client/src/utils/crypto/: crypto_sodium.cpp  crypto_sodium.h
client/src/utils/crypto/helpers/: base64.cpp  base64.h  crypto_info.cpp  crypto_info.h
client/src/utils/error/: app_error.h  error_types.h
client/src/utils/files/: file_utils.cpp  file_utils.h  files.cpp  files.h  paths.h
client/src/utils/files/config_storage/: config_storage.cpp  config_storage.h
client/src/utils/files/json/: json_parser.cpp  json_parser.h
server/: server.py
server/python-server/: server.py
server/rust-server/: Cargo.toml
server/rust-server/src/: error.rs  handlers.rs  main.rs  models.rs  state.rs
tests/: test_command_parser.cpp  test_json_models.cpp
