[package]
name = "cli-messenger-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.15"
chrono = "0.4"
hyper = { version = "1", features = ["http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tokio-rustls = "0.25"
rustls-pemfile = "2"
tower = { version = "0.4", features = ["util"] }
